--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    @apply m-0 p-0 outline-0 box-border;
+}
+
+body {
+    @apply min-h-screen h-full flex flex-col bg-blue-200 overflow-x-hidden;
+}
 
 label {
     @apply block font-bold
@@ -16,12 +23,12 @@ input {
 }
 
 .btn {
-    @apply border border-gray-600 px-2 rounded-lg text-white font-semibold
+    @apply border border-gray-600 px-2 rounded-lg text-white font-semibold hover:border-gray-300
 }
 
-.base-container {
+/* .base-container {
     @apply w-full h-[100vh] bg-blue-200
-}
+} */
 
 .main-title {
     @apply text-4xl py-4 font-extrabold text-center
